feat(data): in-card operation switch, editor ownership, cross-logic clipboard
Squash of 23 commits on top of 8258a1e (v5.2.0). 40 files, +5415/-414.

* data cards: collapse 68 operation cards into 10 (one per structure), pick the
  operation with in-card buttons, one input slot per parameter, and mark the
  whole card red at edit time when its arguments cannot compile
* editor ownership: new logicsugar.editorConflict setting with four modes
  (takeover / ask / stepaside / coexist). The install guard decides the current
  owner explicitly instead of assuming "not mine -> replace"; coexist runs the
  LogicSugar canvas inside another mod's logic editor (SugarCoexist)
* entry skip: the compiled program always ends with one `set @counter 0`, so the
  multi-KB carrier never executes (MDTX value column reads "null")
* tooltip: wrap the text instead of only clamping the container
  (SugarTooltip / TextWrap); move the two fixed-width buttons off the bottom bar
* clipboard: copy/paste a selection across logic blocks, stored as sugar source
  rather than compiled mlog; jumps are refused on both sides
* i18n: operation cards and palette buttons use the short on-card names again
* palette: operation cards stay in their declaration's column
* asserts: assertion and log cards are laid out row by row
* android: restore the mod's translation (ICU fills a script suffix the file
  lookup does not expect) and replace Java 9+ collection factories that D8 does
  not desugar below API 30
* tests: source nails no longer depend on the checked-out line endings

Entry-skip compatibility, measured in both directions with the era probe:
* old editor reads new save: verifyRestore 3/3 passes, carrier path intact and
  re-saving is byte-identical
* new editor reads old save: 3/3 passes; restore() does not strip the line since
  old saves never had it
* the only visible cost is that the old editor shows one extra `set @counter 0`
  line; data and re-saving are unaffected

The skip line is part of t