@@ -107,8 +107,8 @@ public class MapModule extends DataModule{
     /** analyze 阶段方法糖解析用的轻量声明扫描（不依赖 collect 注册表）。 */
     @Override
     public Map<String, String> declaredKinds(LStatement statement){
-        if(statement instanceof MapStatement card && card.map != null && !card.map.trim().isEmpty()) return Map.of(card.map.trim(), ID);
-        return Map.of();
+        if(statement instanceof MapStatement card && card.map != null && !card.map.trim().isEmpty()) return Collections.singletonMap(card.map.trim(), ID);
+        return Collections.emptyMap();
     }
 
     @Override
