@@ -91,8 +91,8 @@ public class SetModule extends DataModule{
     /** analyze 阶段方法糖解析用的轻量声明扫描（不依赖 collect 注册表）。 */
     @Override
     public Map<String, String> declaredKinds(LStatement statement){
-        if(statement instanceof USetStatement card && card.uset != null && !card.uset.trim().isEmpty()) return Map.of(card.uset.trim(), ID);
-        return Map.of();
+        if(statement instanceof USetStatement card && card.uset != null && !card.uset.trim().isEmpty()) return Collections.singletonMap(card.uset.trim(), ID);
+        return Collections.emptyMap();
     }
 
     @Override
